// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Components/Select SelectWithErrorBoolean smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="select_h9ihn--label"
         for="select_h9ihn"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="select_h9ihn--label"
          name="select_h9ihn"
          id="select_h9ihn"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<button class="nhsuk-button"
        aria-disabled="false"
        type="submit"
>
  Toggle Error
</button>
`;

exports[`Components/Select SelectWithErrorString smoke-test 1`] = `
<div class="nhsuk-form-group nhsuk-form-group--error">
  <label class="nhsuk-label"
         id="select_ae0zc--label"
         for="select_ae0zc"
  >
    Label text goes here
  </label>
  <span class="nhsuk-error-message"
        id="select_ae0zc--error-message"
        role="alert"
  >
    <span class="nhsuk-u-visually-hidden">
      Error:
    </span>
    Error message goes here
  </span>
  <select class="nhsuk-select nhsuk-select--error"
          aria-labelledby="select_ae0zc--label"
          name="select_ae0zc"
          id="select_ae0zc"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
<div class="nhsuk-form-group">
  <input class="nhsuk-input"
         name="input_1txv8"
         id="input_1txv8"
         type="text"
         value="Error message goes here"
  >
</div>
`;

exports[`Components/Select SelectWithHintText smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="select_3twao--label"
         for="select_3twao"
  >
    Label text goes here
  </label>
  <div class="nhsuk-hint"
       id="select_3twao--hint"
  >
    Hint text goes here
  </div>
  <select class="nhsuk-select"
          aria-describedby="select_3twao--hint"
          aria-labelledby="select_3twao--label"
          name="select_3twao"
          id="select_3twao"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3">
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;

exports[`Components/Select Standard smoke-test 1`] = `
<div class="nhsuk-form-group">
  <label class="nhsuk-label"
         id="select-1--label"
         for="select-1"
  >
    Label text goes here
  </label>
  <select class="nhsuk-select"
          aria-labelledby="select-1--label"
          name="select-1"
          id="select-1"
  >
    <option value="1">
      NHS.UK frontend option 1
    </option>
    <option value="2">
      NHS.UK frontend option 2
    </option>
    <option value="3"
            disabled
    >
      NHS.UK frontend option 3
    </option>
  </select>
</div>
`;
